--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/redsocial?serverTimezone=CST
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10373120?serverTimezone=CST
+spring.datasource.username=sql10373120
+spring.datasource.password=4AagRb85QK
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
